2013-10-06  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Add commentary.  Copy bbdb-site.el.in to
	bbdb-site.el.  Clean up.

	* README: Clean up.

2013-07-28  Roland Winkler  <winkler@gnu.org>
	* doc/bbdb.texi: Add @dircategory and @direntry.
	(Bug#38794)

2013-07-28  Roland Winkler  <winkler@gnu.org>
	* m4/package_date.m4: Use more robust output redirection.
	(Bug#39579)

2013-07-28  Roland Winkler  <winkler@gnu.org>
	* m4/emacs_vm.m4: Fix typo.

2013-07-28  Roland Winkler  <winkler@gnu.org>
	* m4/emacs_vm.m4: Define conditional VM unconditionally.

2013-07-27  Roland Winkler  <winkler@gnu.org>
	* m4/emacs_vm.m4, m4/package_date.m4: New files.
	* configure.ac: Use them.  Use brackets for AC_PREREQ.  Define
	macro directory.  Use Automake options -Wall and gnu.
	* autgogen.sh: Simplify.  Use option --force.
	* lisp/bbdb-site.el.in: Renamed from lisp/bbdb-version.el.in.
	Define bbdb-print-tex-path.
	* lisp/bbdb.el, lisp/bbdb-print.el, lisp/Makefile.am: Update
	accordingly.
	* .gitignore: Cover more files.
	* INSTALL: Remove.  Merge with README.
	* README: Update accordingly.

2013-07-18  Roland Winkler  <winkler@gnu.org>
	Clean up usage of automake and autoconf.
	* lisp/bbdb-version.el.in: New file.
	* lisp/bbdb.el, lisp/Makefile.am: Use it.
	* configure.ac: Use AC_CONFIG_SRCDIR.  Require Automake 1.13.
	Test for presence of Emacs.  Configure lisp/bbdb-version.el.
	* .gitignore: Ignore aclocal.m4, doc/texinfo.tex, install-sh,
	lisp/bbdb-version.el, and missing.
	* aclocal.m4, install-sh: Removed.

2013-07-17  Roland Winkler  <winkler@gnu.org>
	Use Automake.  (Thanks to Christian Egli <christian.egli@sbs.ch>)
	* Makefile.am, lisp/Makefile.am, doc/Makefile.am, tex/Makefile.am,
	autogen.sh, AUTHORS, NEWS: New files.
	* Makefile.in, lisp/Makefile.in, doc/Makefile.in, tex/Makefile.in:
	Removed.
	* configure.ac: Use automake.
	* INSTALL: Update accordingly.
	* .gitignore: Ignore Makefile.in.

	* lisp/bbdb-print.el (bbdb-print-tex-path): New variable.